--- a/gb/ncid2420_10.md
+++ b/gb/ncid2420_10.md
@@ -19,6 +19,11 @@
 
 “??最近有上万名法轮功习练.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2016年11月23日 6:43 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/16/11/16/n8498847.md#1" target="_blank">投书：律师常伯阳吃饭被非法拘禁</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/16/11/16/n8498847.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/11/48e2aa03jw8err7gy6maaj20f00f0q4u-150x120.jpg" align ="left"></a>2016年11月11日18时30分左右，本人（常伯阳）来到郑州市中原区市场街“豫和馍菜汤生活馆”饭店与几名友人吃饭。在大厅位子刚坐下，准备点菜，建设路分局警察张磊带领十余名着装警察进入饭店大厅，在仅有一名着装警察出示证件的情况下，要求查验本人和友人的身份证，本人以该行为违法为由予以拒绝。随后，在未告知任何事由和未出具任何法律文书的情况下，一名着便装的男子吆喝.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2016年11月16日 4:52 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/17/1/6/n8675873.md#1" target="_blank">湖南益华小区居民不堪当地政府面子工程向外媒投诉</a><br></h3>我是大陆湖南省益阳市赫山区益华小区的居民，有爆料提供。
+
+我们小区以前本是国有企业，职工一辈子辛辛苦苦工作，然而90年代政府无视百姓民生将所有职工强制“一次性买断”，逃避所有退休补偿。从此职工只能自谋生路，辛苦谋生，居住在老房子里节俭度日。
+
+然而现在，百姓连这样的日子都无法维持了：前段时间政府大搞面子工程“棚户区改造”（把外墙涂抹一层涂料，就叫做棚.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2017年01月07日 2:17 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/17/1/2/n8658784.md#1" target="_blank">一个公民2017年的新年献辞</a><br></h3>依据“主权在民”这一普遍认同的法则，依据《中华人民共和国宪法》第二条“中华人民共和国的一切权力属于人民”的规定，我们邀请每一位公民在此共同宣告：我们是国家主人。
 
 必须要有这样的宣告，是因为充斥苦难的社会现实：愚民教育让人丧失思想；欺骗宣传让人迷失真相；虚假选举欺世盗名；玩弄司法使得正义不彰；税负高企导致经济衰退；两极分化引发社会对立；夺命强拆屡屡上演.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2017年01月03日 12:40 AM							</td></tr>
@@ -118,6 +123,5 @@
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/16/10/16/n8403368.md#1" target="_blank">最新时政段子集：房价失控与中国大变局</a><br></h3>【房价失控与中国大变局】中国这轮房价近乎失控地猛涨和去年股市崩盘在政治上的意义有点类似，都说明中央无法控制全局，权贵和官僚利益团体在其中兴风作浪。从中国大变局的角度上看，这是好事。房价涨得越高越快，说明中枢对全局的控制力越弱。当房价彻底失控时，统治集团内部的平衡也就打破了。
 
 【“去库存”原来是“去养老钱”】今天终于醒悟。弄了半天“去库存”不是去房子，而.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2016年10月17日 6:18 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/16/10/7/n8375321.md#1" target="_blank">网文：访民被“车祸”身亡 肇事车不知去向</a><br></h3>2016年9月21日，贵州遵义桐梓县燎原镇发生一起车祸，访民赵世平不幸身亡。至今，当地交警也未找到肇事车辆。有人质疑，赵世平是被谋杀......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2016年10月07日 4:06 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/ncid2420_9.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid2420.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid2420_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid2420_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid2420_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid2420_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid2420_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid2420_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid2420_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid2420_9.md#1">9</a>&nbsp;&nbsp;10&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid2420_11.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/ffbns289/djy/blob/master/gb/ncid2420_10.md#1<br><a href="https://github.com/ffbns289/djy/blob/master/gb/ncid2420_10.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ffbns289/djy/blob/master/gb/ncid2420_10.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid2420_10.htm">http://www.epochtimes.com/gb/ncid2420_10.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
