--- a/gb/news2007_6.md
+++ b/gb/news2007_6.md
@@ -1,4 +1,30 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://hua.vcfkoo.ga/hua/7" rel="nofollow">大纪元</a> | <a href="https://hua.vcfkoo.ga/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://hua.vcfkoo.ga/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://hua.vcfkoo.ga/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://hua.vcfkoo.ga/hua/11" rel="nofollow">看中国</a> | <a href="https://hua.vcfkoo.ga/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://hua.vcfkoo.ga/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://hua.vcfkoo.ga/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>文化艺术</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/ffbns289/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ffbns289/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/11/n11716394.md#1" target="_blank">【三国英雄】之六：曹操的张良和青州兵</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/11/n11716394.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/ad563d3fb25ead5c3c447234f33cecaa-150x120.jpg" align ="left"></a>青州兵从黄巾军起家，被曹操收编，跟随曹操征战四方，在曹操去世后解散，就像上天给予曹操的兵器，随着曹操走上历史舞台，又随着曹操走下历史舞台，让人唏嘘不已。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 3:51 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/19/n11666426.md#1" target="_blank">【馨香雅句】天地有大美而不言——时令之美</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/19/n11666426.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/bb24246b23689719ee2e4543c53f6005-150x120.jpg" align ="left"></a>生活中当人们心生烦恼，往往会寄情于山水，无论是“掬水月在手，弄花香满衣”还是“空山新雨后，天气晚来秋，明月松间照，清泉石上流”，又或是“疏影横斜水清浅，暗香浮动月黄昏”，人们在自然之中让心灵得以释放。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 12:12 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/18/n11729919.md#1" target="_blank">奥古斯特的终局（下）</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/18/n11729919.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Sherlock_Holmes_poster_1916-150x120.jpg" align ="left"></a>（续前文）
+
+林德仍背对着我说：“哈啰，詹米。”
+
+“你怎么知道是我？”我轻松地说：“你们的拿手活都该换了，现在这招我都快见怪不怪了。”
+
+“坐吧。”
+
+他示意我在沙发坐下。
+
+“夏洛特人呢？”
+
+我耸耸肩。
+
+他说：“我想也是。”
+
+“福尔摩斯太太还好吗？”
+
+我试图改变话题。
+.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 2:52 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/30/n11691726.md#1" target="_blank">古人的智慧发明：木鸟探城 木牛助阵</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/30/n11691726.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Chengyangqiao_Guangxi_China-150x120.jpg" align ="left"></a>鲁班制作了木鸢飞行器。用木鸢窥探宋城，是否很像现代无人机侦察敌情一般？只不过，木鸟飞行器的引擎构造究竟如何，至今仍然是不解之谜。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 9:50 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/16/n11725356.md#1" target="_blank">为什么说“吃过冬至汤圆长一岁”？</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/16/n11725356.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/12/161202000050100692-150x120.jpg" align ="left"></a>现在一般认为吃过年夜饭过了年才长一岁，为什么俗谚说“吃过冬至汤圆长一岁”呢？这说法有根据吗？是有根据的，而且源远流长喔！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 9:07 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/13/n11720478.md#1" target="_blank">天地清明引(142) 东流水－宫椽倾圮1</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/13/n11720478.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/07/Peach_Festival_of_the_Queen_Mother_of_the_West_Freer_Gallery_of_Art-150x120.jpg" align ="left"></a>话说刑部审结京城东市私弹禁曲一案，纳兰之前照会，言不许诛连，斩首二十余人。翰林院孔目周清离开刑部，似飘絮浮萍，无根无定。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 8:00 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/19/n11733028.md#1" target="_blank">以世运占星学解析中共政权的出生盘</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/19/n11733028.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1-179-1-150x120.jpg" align ="left"></a>世运占星学（Mundane astrology）是关于太阳、月亮和行星的位置变化对世界事件的影响的研究。最好使用国家的出生盘来进行分析和预测。中共国于1949年10月1日15:01分在北京宣布成立，于是从中共国的出生盘就可以准确地判断这个国家的性质、发展趋势以及结局，因为在每一个出生盘上都有第八宫的宫头和第八宫内的行星.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 2:11 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/19/n11733041.md#1" target="_blank">许其正：海港</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/19/n11733041.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/09/dc8e41159437f699689a2b43dd28d65b-150x120.jpg" align ="left"></a> 像终日奔波疲惫不堪的工作者回到了家，船回到了海港。  像浪迹天涯饱受风霜的游子投向慈母的怀抱，船投向了海港。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 12:12 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/19/n11732870.md#1" target="_blank">台湾古典诗：小诸城枫红</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/19/n11732870.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/ff3360b0205e089d1d575b36e60d1dd2-150x120.jpg" align ="left"></a> 黑门桥畔满山枫，夹道缤纷璨碧空； 霜染千林疑梦境，余霞不尽夕阳红。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 11:06 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/11/n11714906.md#1" target="_blank">“天下法书第一”王羲之《快雪时晴帖》的意趣</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/11/n11714906.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/8d0d227953a1cfe6376682757331fe0a-150x120.jpg" align ="left"></a>《快雪时晴帖》是一封非常简短的行书体书信 ，由王羲之写给淮阴的张姓朋友。表现了什么美感和人生意境？历代受到什么赞美？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 10:53 PM			</td></tr>
@@ -18,18 +44,11 @@
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/16/n11724979.md#1" target="_blank">“一元复始”古人为何贺冬至不贺夏至？</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/16/n11724979.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/f3f06ef55daa27b3720bdcdcc269b969-150x120.jpg" align ="left"></a>古人为何贺冬至不贺夏至？“一元复始”为何对应冬至节？隐含什么寓意？其道理在《易经》中寻。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 1:27 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/12/n11717066.md#1" target="_blank">林园水塘部 （中）</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/12/n11717066.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1707261846022483-150x120.jpg" align ="left"></a>美雪用指甲抓了抓身体，当从皮肤上掉落的皮屑溶进水中，会被鱼群当成池水里的天然粒子。之前，胜郎就是靠着这方法让鱼只对他日渐熟悉，直到它们会自己游向前来，将肚腹就着胜郎的掌心休息。这个动作，每次都让园池司的官员们看得入迷。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 9:48 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/11/n11716248.md#1" target="_blank">孙运璿的未竟之路</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/11/n11716248.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/SUN2-150x120.jpg" align ="left"></a>孙运璿先生在台湾经济发展的关键时期担任了近二十年的部长与行政首长，普遍被认为是台湾经济与科技发展的主要推手，他带领着一群杰出的政经团队让台湾安然渡过石油危机、中美断交等事件。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 8:37 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/9/n11710394.md#1" target="_blank">天地清明引(140) 东流水－浩然正气5</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/9/n11710394.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/4325af0fb8983b64fd5334fb52749c7c-150x120.jpg" align ="left"></a>莅日，三部会审。禁曲主审武平王纳兰庭芳、刑部尚书铎克齐、大理寺卿郑恕杰，于刑部升堂，审理京城东市私弹禁曲一案。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 8:00 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/30/n11691752.md#1" target="_blank">【馨香雅句】“不鸣则已，一鸣惊人”背后的故事</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/30/n11691752.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/be39713a3f9512907ae3f44e080e92e7-150x120.jpg" align ="left"></a>生活中有很多人平时没没无闻，但是却突然一鸣惊人，做出很大的成就，这背后是有如神助还是另有其因呢？今天和大家分享一个楚庄王的故事。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 12:12 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/25/n11679909.md#1" target="_blank">麦立：防</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/25/n11679909.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/mily-1218-150x120.jpg" align ="left"></a>有人时时在 防 防坏人 防小偷  防自己心爱的 流失 防自己心爱的 减损 防这         防那......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 12:05 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/17/n11728545.md#1" target="_blank">【看川普推特学英文】川普三度观赏海陆大赛 聊聊美式足球日常</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/17/n11728545.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/trumpGettyImages-1188758472-150x120.jpg" class="attachment-thumbnail size-thumbnail wp-post-image" alt="US President Donald Trump watches the game with members of the Navy during the Army-Navy football game in Philadelphia, Pennsylvania on December 14, 2019. (Photo by Andrew CABALLERO-REYNOLDS / AFP) (Photo by ANDREW CABALLERO-REYNOLDS/AFP via Getty Images)" align ="left"></a>美式足球或美式橄榄球（American Football），这是一个全世界只有美国人在玩的运动。根据《富比士》资料，2019年超级杯（NFL）时段的电视广告费用，创下30秒钟以约台币1.6亿元售出的纪录。是什么魔力让这个运动“价值超凡”？本周让我们一起来了解美式橄榄球的威力！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 11:28 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/17/n11728571.md#1" target="_blank">浮生行吟：专业的样子</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/17/n11728571.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/04/1511121402242483-150x120.jpg" align ="left"></a>想要成功，除了强化与运用本身的专业知识、经验，不断的去创新、实践外，还必须具备专业纪律。纪律，促使人拥有更好的职业道德；纪律，帮助养成良好的习惯与掌握适度的节奏；纪律，让人更能增强专注力，提高工作效率。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 11:21 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/12/n11719120.md#1" target="_blank">暗室欺心不知神目如电 他们转生牲畜为还债</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/12/n11719120.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/09/Ten_Kings_of_Hell_No.10-1-150x120.jpg" align ="left"></a>历史上很多故事都印证着六道轮回并不是虚构出来的。在这些神异的故事中，有一些人为了还债而转生为牲畜。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 10:04 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/15/n11723487.md#1" target="_blank">游牧人生</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/15/n11723487.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/shutterstock_243535669-150x120.jpg" align ="left"></a>他们放弃过去的传统住家，打破租金和房贷的枷锁，搬进旅行车、露营车和拖车式活动房屋，追逐美好的天气，四处旅行，靠旺季时的临时打工来确保油箱的满载。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 9:29 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/12/n11719103.md#1" target="_blank">【历史回眸】西安事变中的蒋介石</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/12/n11719103.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/KMT_officials_in_the_Xian_Incident-150x120.jpg" align ="left"></a>1936年12月12日，张学良和杨虎城发动了震惊中外的西安事变，身处危难中的蒋介石拒绝向叛军做出任何承诺与妥协，并训示张杨二人：“此次西安事变，实为中国五千年来历史绝续之所关，亦为中华民族人格高下之分野，不仅有关中国之存亡而已。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 7:58 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/20/n11735539.md#1" target="_blank">五律：诗（二）</a><br></h3> 抖擞重霄下，落尘天上尊。 大音发星斗，高响动乾坤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 12:03 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/20/n11734081.md#1" target="_blank">诗歌：深冬</a><br></h3>  大雪漫漫入深冬 松柏青青笑寒风......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 9:23 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/19/n11733039.md#1" target="_blank">五律：思念</a><br></h3> 何事长萦梦，任情千里飞。 天荒犹客老，物换岂人非。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 12:03 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/18/n11730570.md#1" target="_blank">歌词：这里，那里（二）</a><br></h3> 春在玛瑙里， 夏在翡翠里， 秋在金籽里， 冬在璧玉里。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 8:19 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/18/n11730550.md#1" target="_blank">五律：情</a><br></h3> 直教从死生，客雁古留声。 尘界神长在，世缘人未明。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 10:42 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/17/n11728493.md#1" target="_blank">新诗：哭泣</a><br></h3> 水经浅滩的呜咽 是河流的哭泣 叶枯寒枝的呜咽 是树木的哭泣 内心深处的呜咽......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 10:33 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/16/n11726292.md#1" target="_blank">五绝：灯雪</a><br></h3> 日暮京城冷，纷飞大雪扬。 翩翩灯溢彩，玉落舞芳香。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 8:21 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/news2007_5.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news2007.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news2007_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news2007_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news2007_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news2007_5.md#1">5</a>&nbsp;&nbsp;6&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news2007_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news2007_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news2007_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news2007_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news2007_7.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/ffbns289/djy/blob/master/gb/news2007_6.md#1<br><a href="https://github.com/ffbns289/djy/blob/master/gb/news2007_6.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ffbns289/djy/blob/master/gb/news2007_6.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2007_6.htm">http://www.epochtimes.com/gb/news2007_6.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
